# threadwise

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/commands/: run-tests.md
.claude/docs/: DECISIONS.md  ROADMAP.md  TESTING.md
.claude/hooks/: post-edit-check.sh
.claude/skills/run-tests/: SKILL.md
src/rag_etl/: __init__.py
src/rag_etl/core/: __init__.py  models.py
src/threadwise/: __init__.py
src/threadwise/core/: __init__.py  models.py  protocols.py
src/threadwise/embedding/: __init__.py  config.py  embedder.py  errors.py
src/threadwise/gmail/: __init__.py  client.py
src/threadwise/processing/: __init__.py  chunker.py  config.py  email_processor.py  summarizer.py
tests/: conftest.py  conftest_db.py  test_chunker.py  test_docker_smoke.py  test_email_processor.py  test_embedder.py  test_gmail_client.py  test_models.py  test_summarizer.py
tests/fixtures/: email_html.py  gmail_thread_attachments.json  gmail_thread_reply_chain.json  gmail_thread_simple.json
